--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "Precious Oben",
   "name": "Precious Oben | Data Analyst & Engineer",
+  "description": "Data Analyst and Data Engineer specialising in end-to-end pipelines, reporting automation, and analytics consulting.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -16,6 +17,21 @@
       "src": "favicon-16x16.png",
       "type": "image/png",
       "sizes": "16x16"
+    },
+    {
+      "src": "android-chrome-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "android-chrome-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "type": "image/png",
+      "sizes": "180x180"
     }
   ],
   "start_url": ".",
